--- a/app/src/main/res/layout-sw600dp/fragment_home.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_home.xml
@@ -25,6 +25,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 app:indicatorColor="?attr/colorPrimary"
+                android:indeterminate="true"
                 app:trackColor="?attr/colorSurfaceVariant" />
 
             <TextView
@@ -62,7 +63,30 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_max="@dimen/max_card_width_home">
+                <LinearLayout
+                    android:id="@+id/top_loading_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="8dp"
+                    android:gravity="center"
+                    android:background="@color/fundocartao"
+                    android:visibility="gone">
 
+                    <com.google.android.material.progressindicator.CircularProgressIndicator
+                        android:layout_width="6dp"
+                        android:layout_height="6dp"
+                        android:indeterminate="true"
+                        app:indicatorColor="?attr/colorPrimary"
+                        app:trackColor="?attr/colorSurfaceVariant" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="Carregando dados..."
+                        android:textColor="?attr/colorOnSurface" />
+                </LinearLayout>
                 <!-- Container do Carrossel com Loading -->
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
