--- a/app/src/main/res/layout-sw600dp/fragment_pages.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_pages.xml
@@ -26,6 +26,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 app:indicatorColor="?attr/colorPrimary"
+                android:indeterminate="true"
                 app:trackColor="?attr/colorSurfaceVariant" />
 
             <TextView
