--- a/app/src/main/res/drawable/ic_plantao_duvidas.xml
+++ b/app/src/main/res/drawable/ic_plantao_duvidas.xml
@@ -1,5 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M21.99,4c0,-1.1 -0.89,-2 -1.99,-2L4,2c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h14l4,4 -0.01,-18zM18,14L6,14v-2h12v2zM18,11L6,11L6,9h12v2zM18,8L6,8L6,6h12v2z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="20dp"
+    android:height="20dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+  <path
+      android:pathData="M240,560h480v-60L240,500v60ZM240,430h480v-60L240,370v60ZM240,300h480v-60L240,240v60ZM880,880 L720,720L140,720q-24,0 -42,-18t-18,-42v-520q0,-24 18,-42t42,-18h680q24,0 42,18t18,42v740ZM140,660h606l74,80v-600L140,140v520ZM140,660v-520,520Z"
+      android:fillColor="#e3e3e3"/>
 </vector>
