--- a/app/src/main/res/drawable/ic_assignment_24.xml
+++ b/app/src/main/res/drawable/ic_assignment_24.xml
@@ -1,5 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M3,18h12v-2L3,16v2zM3,6v2h18L21,6L3,6zM3,13h18v-2L3,11v2z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="20dp"
+    android:height="20dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+  <path
+      android:pathData="M120,720v-60h480v60L120,720ZM120,510v-60h720v60L120,510ZM120,300v-60h720v60L120,300Z"
+      android:fillColor="#e3e3e3"/>
 </vector>
