--- a/app/src/main/res/drawable/ic_horarios_aula.xml
+++ b/app/src/main/res/drawable/ic_horarios_aula.xml
@@ -1,7 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M11.99,2C6.47,2 2,6.48 2,12s4.47,10 9.99,10C17.52,22 22,17.52 22,12S17.52,2 11.99,2zM12,20c-4.42,0 -8,-3.58 -8,-8s3.58,-8 8,-8 8,3.58 8,8 -3.58,8 -8,8z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M12.5,7H11v6l5.25,3.15 0.75,-1.23 -4.5,-2.67z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="20dp"
+    android:height="20dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+  <path
+      android:pathData="m627,673 l45,-45 -159,-160v-201h-60v225l174,181ZM480,880q-82,0 -155,-31.5t-127.5,-86Q143,708 111.5,635T80,480q0,-82 31.5,-155t86,-127.5Q252,143 325,111.5T480,80q82,0 155,31.5t127.5,86Q817,252 848.5,325T880,480q0,82 -31.5,155t-86,127.5Q708,817 635,848.5T480,880ZM480,480ZM480,820q140,0 240,-100t100,-240q0,-140 -100,-240T480,140q-140,0 -240,100T140,480q0,140 100,240t240,100Z"
+      android:fillColor="#e3e3e3"/>
 </vector>
