--- a/app/src/main/res/drawable/ic_relatorio_evolucao.xml
+++ b/app/src/main/res/drawable/ic_relatorio_evolucao.xml
@@ -1,5 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="960" android:viewportWidth="960" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M480,840L80,360L200,120L760,120L880,360L480,840ZM385,320L575,320L515,200L445,200L385,320ZM440,667L440,400L218,400L440,667ZM520,667L742,400L520,400L520,667ZM664,320L770,320L710,200L604,200L664,320ZM190,320L296,320L356,200L250,200L190,320Z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="20dp"
+    android:height="20dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+  <path
+      android:pathData="M480,840 L80,360l120,-240h560l120,240 -400,480ZM368,330h224l-75,-150h-74l-75,150ZM450,711v-321L183,390l267,321ZM510,711 L777,390L510,390v321ZM659,330h136l-75,-150L584,180l75,150ZM165,330h136l75,-150L240,180l-75,150Z"
+      android:fillColor="#e3e3e3"/>
 </vector>
